cmake_minimum_required(VERSION 3.21)
project(C__learning)

set(CMAKE_CXX_STANDARD 14)

add_executable(p1 DataStructure/linear_list/linear_list1.cpp)
add_executable(p2 Practice/project/p2.cpp)
add_executable(p3 Practice/project/p3.cpp)
add_executable(p4 Practice/project/p4.cpp)
add_executable(demo1 Practice/project/demo1.cpp)
add_executable(heart Practice/project/heart.c)
add_executable(array_demo1 Practice/Array/array_demo1.cpp)
add_executable(array_demo2 Practice/Array/array_demo2.cpp)
add_executable(array_demo_3 Practice/Array/array_demo_3.cpp)
add_executable(array_demo_4 Practice/Array/array_demo_4.cpp)
add_executable(demo Practice/Array/demo.cpp)
add_executable(array_demo_5 Practice/Array/array_demo_5.cpp)
add_executable(demo2 Practice/Array/demo2.cpp)
add_executable(array_demo_6 Practice/Array/array_demo_6.cpp)
add_executable(demo3 Practice/Array/demo3.cpp)
add_executable(array_demo_7 Practice/Array/array_demo_7.cpp)
add_executable(p5 Practice/project/p5.cpp)
add_executable(demo4 Practice/Array/demo4.cpp)
add_executable(demo5 Practice/Array/demo5.cpp)
add_executable(demo6 Practice/Array/demo6.cpp)
add_executable(p6 Practice/project/p6.cpp)
add_executable(Func.demo_1 Practice/function/Func.demo_1.cpp)
add_executable(Func.demo_2 Practice/function/Func.demo_2.cpp)
add_executable(Fdemo_3 Practice/function/Fdemo_3.cpp)
add_executable(Fdemo_4 Practice/function/Fdemo_4.cpp)
add_executable(Fdemo_5 Practice/function/Fdemo_5.cpp)
add_executable(Fdemo_7 Practice/function/Fdemo_7.cpp)
add_executable(Fdemo_8 Practice/function/Fdemo_8.cpp)
add_executable(Fdemo_9 Practice/function/Fdemo_9.cpp)
add_executable(ss Practice/project/ss.cpp)
add_executable(Test Practice/project/Test.cpp)
add_executable(Fdemo10 Practice/function/Fdemo10.cpp)
add_executable(ddd Practice/project/ddd.cpp)
add_executable(Test1 Practice/function/Test1.cpp)
add_executable(Test2 Practice/function/Test2.cpp)
add_executable(dd Practice/function/dd.cpp)

add_executable(linear_list1 DataStructure/linear_list/linear_list1.cpp)